--- a/about.html
+++ b/about.html
@@ -17,7 +17,10 @@
       property="og:description"
       content="Discover more about my experience and projects in front-end development."
     />
-    <meta property="og:url" content="https://yourwebsite.com/about.html" />
+    <meta
+      property="og:url"
+      content="https://bruna-borelli-front-end-dev.netlify.app/"
+    />
     <title>About Bruna Borelli</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -56,9 +59,9 @@
               <div class="card-body">
                 <h5 class="card-title">Weather Project</h5>
                 <img
-                  src="images/weather.png"
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/020/original/weather.png?1739830154"
                   class="img-fluid"
-                  alt="Weather project displaying real-time weather updates"
+                  alt="Weather project"
                 />
               </div>
             </div>
@@ -68,9 +71,9 @@
               <div class="card-body">
                 <h5 class="card-title">Yoga Project</h5>
                 <img
-                  src="images/yoga.png"
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/019/original/yoga.png?1739830076"
                   class="img-fluid"
-                  alt="Yoga project showcasing relaxation techniques"
+                  alt="Yoga project"
                 />
               </div>
             </div>
@@ -80,9 +83,9 @@
               <div class="card-body">
                 <h5 class="card-title">Yogurt Project</h5>
                 <img
-                  src="images/yogurt.png"
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/018/original/yogurt.png?1739829918"
                   class="img-fluid"
-                  alt="Yogurt project featuring healthy recipes"
+                  alt="Yogurt project"
                 />
               </div>
             </div>
