--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       property="og:description"
       content="Explore my front-end development projects and contact me for collaborations."
     />
-    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta
+      property="og:url"
+      content="https://bruna-borelli-front-end-dev.netlify.app/"
+    />
     <title>Bruna Borelli - Front-End Developer</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -76,9 +79,9 @@
             <div class="card-body">
               <h5 class="card-title">Weather Project</h5>
               <img
-                src="images/weather.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/020/original/weather.png?1739830154"
                 class="img-fluid"
-                alt="Weather project displaying real-time weather updates"
+                alt="Weather project"
               />
             </div>
           </div>
@@ -88,9 +91,9 @@
             <div class="card-body">
               <h5 class="card-title">Yoga Project</h5>
               <img
-                src="images/yoga.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/019/original/yoga.png?1739830076"
                 class="img-fluid"
-                alt="Yoga project showcasing relaxation techniques"
+                alt="Yoga project"
               />
             </div>
           </div>
@@ -100,9 +103,9 @@
             <div class="card-body">
               <h5 class="card-title">Yogurt Project</h5>
               <img
-                src="images/yogurt.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/018/original/yogurt.png?1739829918"
                 class="img-fluid"
-                alt="Yogurt project featuring healthy recipes"
+                alt="Yogurt project"
               />
             </div>
           </div>
