--- a/index.html
+++ b/index.html
@@ -2,84 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Bruna Borelli - Front-End Developer portfolio. Discover my projects and get in touch!"
-    />
-    <meta
-      name="keywords"
-      content="front-end developer, web developer, portfolio, programming projects"
-    />
-    <meta property="og:title" content="Bruna Borelli - Front-End Developer" />
-    <meta
-      property="og:description"
-      content="Explore my front-end development projects and contact me for collaborations."
-    />
-    <meta
-      property="og:url"
-      content="https://bruna-borelli-front-end-dev.netlify.app/"
-    />
-    <title>Bruna Borelli - Front-End Developer</title>
+    <title>Bruna Borelli | Front-end Developer</title>
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">Bruna Borelli</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link text-white" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="about.html#contact"
-                >Contact</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="container text-center my-5">
-      <h2 class="mt-5">👋 Hi! I am</h2>
+    <div class="hero">
+      <p class="greeting">👋 Hello, I am</p>
       <h1>Bruna Borelli</h1>
-      <h3>🇧🇷 Front-end developer, based in 🇪🇺</h3>
-      <div class="navigation-links my-4">
-        <a href="about.html#contact" class="btn btn-primary mx-2">Contact me</a>
-        <a href="about.html" class="btn btn-outline-primary mx-2">About me</a>
+      <h2 class="mb-5">Front-end Developer based in Portugal</h2>
+      <div>
+        <a href="about.html" class="btn btn-branding">About me</a>
       </div>
     </div>
-
-    <div class="container mb-5">
+    <p class="text-center m-5">A selection of my best projects.</p>
+    <div class="container">
       <div class="row">
         <div class="col-md-4 col-12 mb-3">
           <div class="card h-100">
             <div class="card-body">
               <h5 class="card-title">Weather Project</h5>
               <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/020/original/weather.png?1739830154"
+                src="images/weather.png"
                 class="img-fluid"
                 alt="Weather project"
               />
@@ -90,11 +39,7 @@
           <div class="card h-100">
             <div class="card-body">
               <h5 class="card-title">Yoga Project</h5>
-              <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/019/original/yoga.png?1739830076"
-                class="img-fluid"
-                alt="Yoga project"
-              />
+              <img src="images/yoga.png" class="img-fluid" alt="Yoga project" />
             </div>
           </div>
         </div>
@@ -103,7 +48,7 @@
             <div class="card-body">
               <h5 class="card-title">Yogurt Project</h5>
               <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/018/original/yogurt.png?1739829918"
+                src="images/yogurt.png"
                 class="img-fluid"
                 alt="Yogurt project"
               />
@@ -112,10 +57,5 @@
         </div>
       </div>
     </div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
