--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="card-body">
               <h5 class="card-title">Weather Project</h5>
               <img
-                src="images/weather.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/020/original/weather.png?1739830154"
                 class="img-fluid"
                 alt="Weather project"
               />
@@ -39,7 +39,11 @@
           <div class="card h-100">
             <div class="card-body">
               <h5 class="card-title">Yoga Project</h5>
-              <img src="images/yoga.png" class="img-fluid" alt="Yoga project" />
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/019/original/yoga.png?1739830076"
+                class="img-fluid"
+                alt="Yoga project"
+              />
             </div>
           </div>
         </div>
@@ -48,7 +52,7 @@
             <div class="card-body">
               <h5 class="card-title">Yogurt Project</h5>
               <img
-                src="images/yogurt.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/018/original/yogurt.png?1739829918"
                 class="img-fluid"
                 alt="Yogurt project"
               />
