--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Bruna Borelli</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/portfolio.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +20,7 @@
     <div class="container">
       <h1 class="text-center my-4">About me</h1>
       <h3 class="text-center mb-4">
-        Front-end developer from Lisbon, Portugal
+        Front-end Developer from Lisbon, Portugal
       </h3>
       <div class="about-paragraphs mb-5 text-center">
         <p>
