--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bruna Borelli | Front-end Developer</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta
+      name="description"
+      content="Learn more about Bruna Borelli, a front-end developer based in Lisbon, Portugal."
+    />
+    <meta
+      name="keywords"
+      content="front-end developer, web developer, portfolio, Lisbon, Portugal"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
     <div class="hero">
@@ -22,42 +30,49 @@
     </div>
     <p class="text-center m-5">A selection of my best projects.</p>
     <div class="container">
-      <div class="row">
-        <div class="col-md-4 col-12 mb-3">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Weather Project</h5>
-              <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/020/original/weather.png?1739830154"
-                class="img-fluid"
-                alt="Weather project"
-              />
-            </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yoga.png" class="img-fluid" alt="Yoga Project" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Yoga Project</h2>
+            <p class="mb-5 text-muted">
+              A serene and intuitive yoga app that provides guided sessions,
+              enhancing mindfulness and relaxation through technology.
+            </p>
+            <a href="#" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
-        <div class="col-md-4 col-12 mb-3">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Yoga Project</h5>
-              <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/019/original/yoga.png?1739830076"
-                class="img-fluid"
-                alt="Yoga project"
-              />
-            </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yogurt.png" class="img-fluid" alt="Yogurt Project" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Yogurt Project</h2>
+            <p class="mb-5 text-muted">
+              A creative and visually appealing project that showcases dynamic
+              UI elements and seamless user interactions.
+            </p>
+            <a href="#" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
-        <div class="col-md-4 col-12 mb-3">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Yogurt Project</h5>
-              <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/158/018/original/yogurt.png?1739829918"
-                class="img-fluid"
-                alt="Yogurt project"
-              />
-            </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              A real-time weather app that provides accurate forecasts using API
+              integration, featuring a sleek and user-friendly design.
+            </p>
+            <a href="#" class="btn btn-branding-outline"> Learn more </a>
           </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt="Weather App" />
         </div>
       </div>
     </div>
