--- a/about.html
+++ b/about.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Bruna Borelli</title>
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    <meta
+      name="description"
+      content="Learn more about Bruna Borelli, a front-end developer based in Lisbon, Portugal."
+    />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
     <a
@@ -17,28 +21,25 @@
       class="homepage-link text-primary text-center d-block my-3"
       >⬅ Back to homepage</a
     >
-    <div class="container">
-      <h1 class="text-center my-4">About me</h1>
-      <h3 class="text-center mb-4">
-        Front-end Developer from Lisbon, Portugal
-      </h3>
-      <div class="about-paragraphs mb-5 text-center">
-        <p>
-          With over 15 years of experience in journalism, marketing, and
-          academic writing, I have built a strong foundation in research,
-          content strategy, and storytelling. Now, I'm bringing this expertise
-          into the world of programming, combining creativity with technical
-          skills to build impactful digital experiences.
-        </p>
-      </div>
-      <div id="contact" class="text-center mb-5">
-        <h2>📮 Contact me</h2>
-        <a
-          href="mailto:borelli.bruna@gmail.com"
-          class="email-link text-primary text-decoration-none fs-4"
-          >borelli.bruna@gmail.com</a
-        >
-      </div>
+    <div class="container text-center my-5">
+      <h1>About Me</h1>
+      <h3>Front-end Developer from Lisbon, Portugal</h3>
+      <p>
+        With over 15 years of experience in journalism, marketing, and academic
+        writing, I have built a strong foundation in research, content strategy,
+        and storytelling. Now, I'm bringing this expertise into the world of
+        programming, combining creativity with technical skills to build
+        impactful digital experiences.
+      </p>
+    </div>
+    <div id="contact" class="text-center my-5">
+      <h2>📮 Contact Me</h2>
+      <a
+        href="mailto:borelli.bruna@gmail.com"
+        class="email-link text-primary text-decoration-none fs-4"
+      >
+        borelli.bruna@gmail.com
+      </a>
     </div>
   </body>
 </html>
