--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="hero text-center">
       <p>👋 Hello, I am</p>
       <h1>Bruna Borelli</h1>
-      <h2 class="mb-4">Front-end Developer based in Portugal</h2>
+      <h2 class="mb-4">🇧🇷🇵🇹 Front-end Developer based in Europe 🇪🇺</h2>
       <a href="about.html" class="btn btn-branding">About me</a>
     </header>
 
@@ -61,7 +61,7 @@
           <h2>World Clock</h2>
           <p class="text-muted">
             A global timekeeping app that allows users to check the current time
-            in multiple cities worldwide with an intuitive interface.
+            in my favorite cities worldwide with an intuitive interface.
           </p>
           <a
             href="https://borellis-timing-the-world.netlify.app/"
@@ -84,8 +84,7 @@
         <div class="col-lg-6 text-center text-lg-start">
           <h2>Critics at Large</h2>
           <p class="text-muted">
-            A collaborative platform for movie and series reviews, allowing
-            users to share insights and rate content.
+            An homage to my favorite poscast, called "Critics at Large".
           </p>
           <a
             href="https://critics-at-large.netlify.app/"
@@ -108,8 +107,8 @@
         <div class="col-lg-6 text-center text-lg-start">
           <h2>Cringe Cupid</h2>
           <p class="text-muted">
-            A fun dating app concept that showcases humorous and unexpected
-            match suggestions.
+            A fun app with AI concept that showcases cheesy icebrakers to use in
+            the dating world.
           </p>
           <a
             href="https://cringe-cupid.netlify.app/"
