--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       name="keywords"
       content="front-end developer, web developer, portfolio, Lisbon, Portugal"
     />
+    <meta property="og:title" content="Bruna Borelli | Front-end Developer" />
+    <meta
+      property="og:description"
+      content="Front-end Developer based in Europe"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +28,7 @@
     <header class="hero text-center">
       <p>👋 Hello, I am</p>
       <h1>Bruna Borelli</h1>
-      <h2 class="mb-4">🇧🇷🇵🇹 Front-end Developer based in Europe 🇪🇺</h2>
+      <h2 class="mb-4">🇧🇷🇵🇹 Front-end Developer based in Europe</h2>
       <a href="about.html" class="btn btn-branding">About me</a>
     </header>
 
@@ -41,17 +46,16 @@
           </p>
           <a
             href="https://borellis-doing-weather.netlify.app/"
-            class="btn btn-branding-outline"
+            class="btn btn-branding-outline mb-3"
             target="_blank"
+            >Visit project</a
           >
-            Visit project
-          </a>
         </div>
         <div class="col-lg-6 text-center">
           <img
             src="styles/weather-app.png"
-            class="img-fluid"
-            alt="Weather App"
+            class="img-fluid project-img"
+            alt="Screenshot of Weather App project"
           />
         </div>
       </div>
@@ -65,17 +69,16 @@
           </p>
           <a
             href="https://borellis-timing-the-world.netlify.app/"
-            class="btn btn-branding-outline"
+            class="btn btn-branding-outline mb-3"
             target="_blank"
+            >Visit project</a
           >
-            Visit project
-          </a>
         </div>
         <div class="col-lg-6 text-center">
           <img
             src="styles/world-clock.png"
-            class="img-fluid"
-            alt="World Clock"
+            class="img-fluid project-img"
+            alt="Screenshot of World Clock project"
           />
         </div>
       </div>
@@ -84,21 +87,20 @@
         <div class="col-lg-6 text-center text-lg-start">
           <h2>Critics at Large</h2>
           <p class="text-muted">
-            An homage to my favorite poscast, called "Critics at Large".
+            An homage to my favorite podcast, "Critics at Large".
           </p>
           <a
             href="https://critics-at-large.netlify.app/"
-            class="btn btn-branding-outline"
+            class="btn btn-branding-outline mb-3"
             target="_blank"
+            >Visit project</a
           >
-            Visit project
-          </a>
         </div>
         <div class="col-lg-6 text-center">
           <img
             src="styles/podcast.png"
-            class="img-fluid"
-            alt="Critics at Large"
+            class="img-fluid project-img"
+            alt="Screenshot of Critics at Large project"
           />
         </div>
       </div>
@@ -107,22 +109,21 @@
         <div class="col-lg-6 text-center text-lg-start">
           <h2>Cringe Cupid</h2>
           <p class="text-muted">
-            A fun app with AI concept that showcases cheesy icebrakers to use in
-            the dating world.
+            A fun app with an AI concept that showcases cheesy icebreakers to
+            use in the dating world.
           </p>
           <a
             href="https://cringe-cupid.netlify.app/"
-            class="btn btn-branding-outline"
+            class="btn btn-branding-outline mb-3"
             target="_blank"
+            >Visit project</a
           >
-            Visit project
-          </a>
         </div>
         <div class="col-lg-6 text-center">
           <img
             src="styles/cringe-cupaid.png"
-            class="img-fluid"
-            alt="Cringe Cupid"
+            class="img-fluid project-img"
+            alt="Screenshot of Cringe Cupid project"
           />
         </div>
       </div>
