Updating social media

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
         >
         <div class="mt-3">
           <a
-            href="https://www.linkedin.com/in/brunaborelli"
+            href="https://www.linkedin.com/in/borelli-bruna/"
             target="_blank"
             class="me-3"
           >
@@ -79,7 +79,7 @@
             />
           </a>
           <a
-            href="https://www.instagram.com/brunaborelli"
+            href="https://www.instagram.com/bborelli/"
             target="_blank"
             class="me-3"
           >
@@ -89,7 +89,7 @@
               style="width: 30px"
             />
           </a>
-          <a href="https://github.com/brunaborelli" target="_blank">
+          <a href="https://github.com/bborelli" target="_blank">
             <img
               src="styles/github-icon.png"
               alt="GitHub"
