--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Learn more about Bruna Borelli, a Front-end Developer based in Europe."
+      content="Contact Bruna Borelli, a Front-end Developer based in Europe."
     />
-    <title>Bruna Borelli | Front-end Developer</title>
+    <title>Contact Bruna Borelli</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -52,41 +52,41 @@
           <li>
             <a href="/" title="Homepage"> Home</a>
           </li>
-          <li class="active">
+          <li>
             <a href="/about.html" title="About Bruna"> About</a>
           </li>
           <li>
             <a href="/work.html" title="Bruna's work"> Work</a>
           </li>
-          <li>
+          <li class="active">
             <a href="/contact.html" title="Contact Bruna"> Contact</a>
           </li>
         </ul>
       </nav>
     </div>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-4">Hi, I’m Bruna Borelli</h1>
-            <h2 class="mb-4">Front-end Developer based in Europe</h2>
-            <p class="mb-5">
-              With over 15 years of experience in journalism, marketing, and
-              academic writing, I have built a strong foundation in research,
-              content strategy, and storytelling. Now, I'm bringing this
-              expertise into the world of programming, combining creativity with
-              technical skills to build impactful digital experiences.
-            </p>
-            <a href="/work.html" class="btn btn-branding">See my projects</a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="styles/bruna-profile.jpeg"
-            alt="Bruna Borelli"
-            class="img-fluid"
-          />
-        </div>
+      <div class="content">
+        <h1 class="mb-5">Let's get in touch!</h1>
+        <h3>Email</h3>
+        <p>
+          <a href="mailto:borelli.bruna@gmail.com">borelli.bruna@gmail.com</a>
+        </p>
+        <h3>LinkedIn</h3>
+        <p>
+          <a href="https://www.linkedin.com/in/borelli-bruna/" target="_blank"
+            >@borelli-bruna</a
+          >
+        </p>
+        <h3>Instagram</h3>
+        <p>
+          <a href="https://www.instagram.com/bborelli/" target="_blank"
+            >@bborelli</a
+          >
+        </p>
+        <h3>GitHub</h3>
+        <p>
+          <a href="https://github.com/bborelli" target="_blank">@bborelli</a>
+        </p>
       </div>
     </div>
     <footer class="container">
