--- a/work.html
+++ b/work.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Learn more about Bruna Borelli, a Front-end Developer based in Europe."
+      content="Explore the projects of Bruna Borelli, a Front-end Developer based in Europe."
     />
-    <title>Bruna Borelli | Front-end Developer</title>
+    <title>Bruna Borelli | Work</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -52,10 +52,10 @@
           <li>
             <a href="/" title="Homepage"> Home</a>
           </li>
-          <li class="active">
+          <li>
             <a href="/about.html" title="About Bruna"> About</a>
           </li>
-          <li>
+          <li class="active">
             <a href="/work.html" title="Bruna's work"> Work</a>
           </li>
           <li>
@@ -65,27 +65,56 @@
       </nav>
     </div>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-4">Hi, I’m Bruna Borelli</h1>
-            <h2 class="mb-4">Front-end Developer based in Europe</h2>
-            <p class="mb-5">
-              With over 15 years of experience in journalism, marketing, and
-              academic writing, I have built a strong foundation in research,
-              content strategy, and storytelling. Now, I'm bringing this
-              expertise into the world of programming, combining creativity with
-              technical skills to build impactful digital experiences.
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="styles/weather-app.png"
+              class="img-fluid mb-3 rounded"
+              alt="Weather App project preview"
+            />
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS, and JavaScript with API integration.
             </p>
-            <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="styles/bruna-profile.jpeg"
-            alt="Bruna Borelli"
-            class="img-fluid"
-          />
+
+          <div class="col-md-6 mb-4">
+            <img
+              src="styles/world-clock.png"
+              class="img-fluid mb-3 rounded"
+              alt="World Clock project preview"
+            />
+            <h3 class="text-center m-0">World Clock</h3>
+            <p class="text-center text-muted">
+              A global timekeeping app built with HTML, CSS, and JavaScript.
+            </p>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <img
+              src="styles/podcast.png"
+              class="img-fluid mb-3 rounded"
+              alt="Critics at Large project preview"
+            />
+            <h3 class="text-center m-0">Critics at Large</h3>
+            <p class="text-center text-muted">
+              An homage to my favorite podcast, crafted with creative design.
+            </p>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <img
+              src="styles/cringe-cupaid.png"
+              class="img-fluid mb-3 rounded"
+              alt="Cringe Cupid project preview"
+            />
+            <h3 class="text-center m-0">Cringe Cupid</h3>
+            <p class="text-center text-muted">
+              A fun app with an AI twist, offering cheesy icebreakers.
+            </p>
+          </div>
         </div>
       </div>
     </div>
