--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="styles/logo-shecodes.png"
+            src="styles/logo.png"
             class="logo d-none d-md-block"
             alt="Bruna Borelli Logo"
           />
           <img
-            src="styles/logo-shecodes.png"
+            src="styles/logo.png"
             class="logo d-block d-md-none"
             alt="Bruna Borelli Logo"
           />
